# djangogameswebsite

./: README.md  manage.py  pyproject.toml  requirements.txt  user_data.json
UserApp/: models.py  serializers.py  views.py
gamesproject/: asgi.py  practise.py  settings.py  urls.py  wsgi.py
templates/: edituser.html  login.html
