[tool.poetry]
name = "djangogamesproject"
version = "0.1.0"
description = ""
authors = ["Sunny Moses Parlapelly <sunnymoses.parlapelly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.6.0"
django = "3.2"
pytz = "2023.3"
sqlparse = "0.4.4"
jwcrypto = "1.2"
attrs = "23.1.0"
build = "0.10.0"
cachecontrol = "0.12.11"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
cleo = "2.0.1"
crashtest = "0.4.1"
distlib = "0.3.6"
dulwich = "0.21.3"
filelock = "3.12.0"
html5lib = "1.1"
idna = "3.4"
importlib-metadata = "6.6.0"
installer = "0.7.0"
jaraco-classes = "3.2.3"
jsonschema = "4.17.3"
keyring = "23.13.1"
lockfile = "0.12.2"
more-itertools = "9.1.0"
msgpack = "1.0.5"
oauthlib = "3.2.0"
packaging = "23.1"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "2.6.2"
poetry = "1.4.2"
poetry-core = "1.5.2"
poetry-plugin-export = "1.3.1"
ptyprocess = "0.7.0"
pycparser = "2.21"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
rapidfuzz = "2.15.1"
requests = "2.29.0"
requests-toolbelt = "0.10.1"
shellingham = "1.5.0.post1"
six = "1.16.0"
tomli = "2.0.1"
tomlkit = "0.11.8"
trove-classifiers = "2023.4.29"
urllib3 = "1.26.15"
virtualenv = "20.21.1"
webencodings = "0.5.1"
xattr = "0.10.1"
zipp = "3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
